# algo-trading

./: CLAUDE.md  README.md  docker-compose.yml
ai-plans/: architecture.md
exchanges/binance/: CMakeLists.txt  Dockerfile  main.cpp
exchanges/bingx/: CMakeLists.txt  Dockerfile  main.cpp
exchanges/bitfinex/: CMakeLists.txt  Dockerfile  main.cpp
exchanges/bitget/: CMakeLists.txt  Dockerfile  main.cpp
exchanges/bybit/: CMakeLists.txt  Dockerfile  main.cpp
exchanges/coinbase-exchange/: CMakeLists.txt  Dockerfile  main.cpp
exchanges/crypto-dot-com-exchange/: CMakeLists.txt  Dockerfile  main.cpp
exchanges/gate/: CMakeLists.txt  Dockerfile  main.cpp
exchanges/htx/: CMakeLists.txt  Dockerfile  main.cpp
exchanges/kraken/: CMakeLists.txt  Dockerfile  main.cpp
exchanges/kucoin/: CMakeLists.txt  Dockerfile  main.cpp
exchanges/mexc/: CMakeLists.txt  Dockerfile  main.cpp
exchanges/okx/: CMakeLists.txt  Dockerfile  main.cpp
exchanges/upbit/: CMakeLists.txt  Dockerfile  main.cpp
scripts/: README.md  binance_buyer.go
